styles/sass/main.scss
/* ... */
button {
    outline: none;
    border: none;
    cursor: pointer;
}

.menu {
    position: absolute;
    right: 2%;
    top: 2%;
    z-index: 2;

    * {
        transition: all 0.2s;
    }

    > .menu-btn {
        position: relative;
        display: inline-block;
        border-radius: 1000px;
        padding: 10px;

        // @include theme() {
        //     background-color: t($bg-1);
        // }

        > button {
            @include theme() {
                color: t($text-color);
            }
            -webkit-tap-highlight-color: transparent;
            background: none;
            vertical-align: middle;
            transition: all 0.2s;
            font-size: 30px;

            &:hover {
                transform: scale(1.2);
                & + .tooltip {
                    right: 100%;
                    visibility: visible;
                    opacity: 1;
                }
            }
            &.rotate {
                transform: rotate(180deg);
            }
        }
    }
}

.tooltip {
    @include theme() {
        background: t($bg-grey);
        color: t($text-2);
    }
    transition: all 0.2s;
    font-family: "Poppins", sans-serif;
    font-size: 0.5em;
    font-weight: 100;
    visibility: hidden;
    opacity: 0;
    position: absolute;
    text-align: center;
    right: 0%;
    pointer-events: none;
    // width: 120px;
    padding: 10px;
    border-radius: 6px;
    line-height: 1em;
    // pointer-events: none;
}

.container {
    position: relative;
    display: grid;
    grid-template-columns: 70vw 1fr;
    border-radius: $border-rounding;
    min-height: 70vh;
    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.075);
}

nav {
    height: 100%;
    grid-column: 2;
    position: relative;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    // justify-content: center;
    clip-path: inset(-1px -1px);
    border-radius: $border-rounding;

    > button {
        @include theme() {
            background: t($bg-grey);
            color: t($text-2);
        }

        flex: 1;
        transition: right 0.5s, background-color 0.5s;
        position: relative;
        padding: 1em;
        font-size: 100%;
        text-align: center;
        /* z-index: 1; */

        &:first-child {
            border-top-right-radius: $border-rounding;
        }
        &:last-child {
            border-bottom-right-radius: $border-rounding;
        }
        &:hover {
            @include theme() {
                background: t($bg-2);
            }
        }
        &.active {
            @include theme() {
                background: t($bg-2);
            }
        }

        > i {
            float: left;
            margin-right: 10px;
        }
    }
}

main {
    grid-column: 1;
    background-color: rgba(131, 131, 131, 0.034);
    backdrop-filter: blur(2px);
    position: relative;
    clip-path: inset(0px -2px);
    border-radius: $border-rounding 0 0 $border-rounding;
}

section {
    @include custom-scrollbar;
    @include theme() {
        color: t($text-2);
        background: t($bg-2);
    }
    // visibility: hidden;
    display: block;
    position: absolute;
    left: 101%;
    height: 100%;
    width: 100%;
    transition: left 0.5s, opacity 0.5s;
    border-radius: $border-rounding 0 0 $border-rounding;
    padding: 5vh 5vw;
    z-index: 0;
    overflow-y: scroll;
    overflow-x: clip;
    font-size: 0.8em;
    line-height: 1.5em;

    &.active {
        // visibility: visible;
        left: 0;
        opacity: 1;
    }

    > h2 {
        margin-top: 10px;
        margin-bottom: 20px;
    }

    > p {
        position: relative;
        margin-bottom: 0.5em;
    }
}

.item-container {
    /* position: absolute; */
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    gap: 10px;
}

.item {
    @include theme() {
        color: t($text-2);
        background: t($bg-3);
    }
    min-width: 300px;
    max-width: 45%;
    border-radius: $border-rounding;
    box-shadow: 0 0 8px 4px rgb(0, 0, 0, 0.1);
    padding: $item-font-size;
    margin: 1em 0;

    &.grow {
        flex-grow: 1;
        max-width: 100%;
    }

    > h3 {
        margin-bottom: 0.5em;
    }

    p {
        // line-height: 1em;
        vertical-align: middle;
        font-size: $item-font-size;
        padding: 0.2em;

        i {
            vertical-align: middle;
            font-size: 24px;
        }

        img {
            vertical-align: middle;
            float: "left";
        }
    }
}

.repos {
    @include custom-scrollbar();
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    gap: 10px;
    overflow-y: clip;
    overflow-x: scroll;
    max-height: 300px;
    width: 100%;
}

.horizontal-scroll {
    min-width: 300px;
    position: relative;
    width: 100%;
    z-index: 3;
    // overflow: clip;
    .scroll-left,
    .scroll-right {
        flex: none;
        z-index: 4;
        flex: none;
        background: none;
        color: white;
        position: absolute;
        top: 50%;
        width: auto;
        transition: all 0.5s;

        @media screen and (max-width: $tablet) {
            display: none;
        }
    }
    .scroll-left {
        left: -25px;
    }
    .scroll-right {
        right: -25px;
    }
}

.scrollable {
    scroll-behavior: smooth;
}

.repo {
    flex: 0 auto;
    min-width: fit-content;

    h3 {
        width: 100%;
        display: inline-block;
        white-space: nowrap;
    }
    p {
        max-width: 400px;
        text-overflow: ellipsis;
        overflow: hidden;
    }

    &.error {
        flex: 1;
        width: 100%;
        a {
            color: white;
        }
    }
}
/* ... */

